upd + eclipse vs swagger api source folder workaround
