# swagger-api-builder/api-handrange-cli/src/main/resources/api.yaml
@@ -20,7 +20,7 @@ consumes:
 produces:
   - application/json
 paths:
-  /ranges:
+  /range:
     get:
       description: Returns all ranges from the system
       operationId: findRanges
@@ -37,14 +37,15 @@ paths:
           description: unexpected error
           schema:
             $ref: '#/definitions/errorModel'
-  /ranges/{range}:
+
+  /range/{id}:
     post:
       description: Creates a new range in the store.  Duplicates are disallowed
       operationId: addRange
       produces:
         - application/json
       parameters:
-        - name: range
+        - name: id
           in: path
           description: Range added
           required: true
@@ -58,7 +59,6 @@ paths:
           description: unexpected error
           schema:
             $ref: '#/definitions/errorModel'
-  /range/{id}:
     get:
       description: Returns a Range based on a single ID
       operationId: findRangeById
